Complete Series Commit

--- a/app/views/employees/show.html.erb
+++ b/app/views/employees/show.html.erb
@@ -23,7 +23,7 @@
 
 			<% if @employee.documents.present? %>
 			<div class="row mt-5">
-				<h2 class="text-center">Employee Document</h2>
+				<h2 class="text-center">Employee Documents</h2>
 				<% @employee.documents.each do |document| %>
 				<div class="card mb-4">	
 					<div class="card-body">
