--- a/app/views/employees/_form.html.erb
+++ b/app/views/employees/_form.html.erb
@@ -35,7 +35,7 @@
 				<% end %>
 			</div>				
 		</div>
-			<div class="col-lg-4">
+		<div class="col-lg-4">
 			<div class="form-group">
 				<%= form.label :date_of_birth, class: "mb-2" %>
 				<%= form.date_field :date_of_birth, class: "form-control form-control-lg rounded-0" %>
@@ -56,7 +56,7 @@
 		<div class="col-lg-4">
 			<div class="form-group">
 				<%= form.label :job_title, class: "mb-2" %>
-				<%= form.date_field :job_title, class: "form-control form-control-lg rounded-0" %>
+				<%= form.text_field :job_title, class: "form-control form-control-lg rounded-0" %>
 				<% @employee.errors.full_messages_for(:job_title).each do |message| %>
 				<p class="text-danger"><%= message%></p>
 				<% end %>
