--- a/app/views/employees/index.html.erb
+++ b/app/views/employees/index.html.erb
@@ -7,7 +7,7 @@
 	</div>
 	<%= link_to "Create New Employee", new_employee_path, class: "btn btn-primary btn-lg mb-4 rounded-0" %>
 	<div class="dropdown mb-4" data-bs-theme="dark">
-		<button class="btn btn-primary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+		<button class="btn btn-primary dropdown-toggle rounded-0" type="button" data-bs-toggle="dropdown" aria-expanded="false">
 			View List In
 		</button>
 		<ul class="dropdown-menu">
