Added Search Bar and Username login

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -67,7 +67,7 @@
             <%= link_to 'Privacy-Policy', privacy_policy_path, class: 'text-reset' %>
           </p>
           <p>
-            <%= link_to 'Terms and Condition', terms_and_conditions_path, class: 'text-reset' %>
+            <%= link_to 'Terms and Conditions', terms_and_conditions_path, class: 'text-reset' %>
           </p>
         </div>
         <!-- Grid column -->
