--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,9 +9,9 @@
     <%= javascript_importmap_tags %>
   </head>
   <body>
-    <%= render 'shared/header' %>
-    <p class="notice"><%= notice %></p>
-    <p class="alert"><%= alert %></p>
+    <%= render 'shared/header', q: Employee.ransack(params[:q]) %>
+    <p class="notice text-center mt-2"><%= notice %></p>
+    <p class="alert text-center mt-2"><%= alert %></p>
     
     <div class="container">
       <div class="row">
