--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,9 +1,11 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
   <div class="container-fluid">
     <%= link_to 'Hr-Mitra', root_path, class: 'navbar-brand' %>
+
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
+
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <% if user_signed_in?  %>
@@ -22,7 +24,41 @@
               <%= link_to "Sign In", new_user_session_path,  class: "nav-link active" %>
             </li>
           <% end %>
+
+          <% if user_signed_in? %>
+            <li class="nav-item">
+              <%= link_to "Employees", employees_path, class: "nav-link active" %>
+            </li>
+            <li class="nav-item">
+              <%= link_to "Documents", documents_path, class: "nav-link active" %>
+            </li>
+            <% end %>
       </ul>
     </div>
+
+    
+    <% if user_signed_in? %>
+      <%= search_form_for q, url: :employees do |form|%>
+
+          <div class="input-group ">
+            <%= form.search_field :name_cont, class: "form-control ", placeholder: "Search by Name or Email"%>
+
+            <%= form.submit "Search", class: "input-group-text " %>
+          </div>
+      <% end  %>
+    <% end%>
   </div>
 </nav>
+
+
+
+<%# if user_signed_in? %>
+      <%#= search_form_for q, url: :employees do |form|%>
+
+        <!-- <div class="form-group d-flex gap-1"> -->
+          <%#= form.search_field :name_cont, class: "form-control rounded-0", placeholder: "Search..."%>
+
+          <%#= form.submit "Search", class: "btn btn-info rounded-0" %>
+        <!-- </div> -->
+      <%# end  %>
+    <%# end  %>
