--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -6,9 +6,30 @@
     <div class="card-body">
       <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
         <%= render "users/shared/error_messages", resource: resource %>
+
+        <div class="form-group">
+          <%= f.label :first_name, class: "form-label mb-2" %>
+          <%= f.text_field :first_name, class: "form-control form-control-lg", autofocus: true %>
+        </div>
+        <div class="form-group">
+          <%= f.label :last_name, class: "form-label mb-2" %>
+          <%= f.text_field :last_name, class: "form-control form-control-lg" %>
+        </div>
+        <div class="form-group">
+          <%= f.label :contact_number, class: "form-label mb-2" %>
+          <%= f.telephone_field :contact_number, maxlength: 10, class: "form-control form-control-lg" %>
+        </div>
+        <div class="form-group">
+          <%= f.label :address, class: "form-label mb-2" %>
+          <%= f.text_field :address, class: "form-control form-control-lg" %>
+        </div>
+        <div class="form-group">
+          <%= f.label :username, class: "form-label mb-2" %>
+          <%= f.text_field :username, class: "form-control form-control-lg" %>
+        </div>
         <div class="form-group">
           <%= f.label :email, class: "form-label mb-2" %>
-          <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "form-control form-control-lg" %>
+          <%= f.email_field :email, class: "form-control form-control-lg" %>
         </div>
         <div class="form-group">
           <%= f.label :password, class: "form-label mb-2 mt-3" %>
